# ATC-Bench

./: .env.example  .gitignore  CAMPAIGN.md  DESIGN.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
atcbench/: __init__.py  cli.py  domain.py
atcbench/baselines/: feasibility.py
atcbench/charts/: __init__.py  kmdw_cd.py  kmdw_gnd.py  kmrl_cd.py  kmrl_gnd.py  kmrl_twr.py
atcbench/harness/: __init__.py  adapters.py  channel.py  ground_session.py  regime.py  session.py  system_prompt.py  tools.py  tower_session.py
atcbench/pilots/: __init__.py  fsm.py  parser.py
atcbench/scenarios/: __init__.py  cd.py  fleet.py  gnd.py  seeds.py  twr.py
atcbench/scoring/: __init__.py  aggregate.py  cd.py  gnd.py  twr.py
atcbench/sim/: __init__.py  events.py  performance.py  taxi.py
atcbench/strips/: __init__.py  store.py
atcbench/verbalizer/: __init__.py  cache.py  llm.py  template.py
runs/smoke_haiku_cd_s42/: events.jsonl  model_io.json  score.json  strips_history.jsonl  transcript.jsonl  verbalizer_cache.json
runs/smoke_haiku_cd_s42_v2/: events.jsonl  model_io.json  scenario.json  score.json  strips_history.jsonl  transcript.jsonl
runs/smoke_haiku_cd_s42_v3/: events.jsonl  model_io.json  score.json  strips_history.jsonl  (+1 more)
tests/: test_channel.py  test_chart_pack.py  test_determinism.py  test_elicitation.py  test_error_classes.py  test_evaluate.py  test_fleet.py  test_ground.py  test_live_adapter.py  test_no_skill_probes.py  test_observation.py  test_parser.py  test_pilot_recall.py  test_regime.py  test_scoring.py  test_tower.py  test_verbalizer.py
(+250 files in other folders)
