[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atcbench"
version = "0.1.0"
description = "ATCBench — a closed-loop agentic benchmark for LLM air traffic control"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]
anthropic = ["anthropic>=0.40"]

[project.scripts]
atcbench = "atcbench.cli:main"

[tool.setuptools.packages.find]
include = ["atcbench*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
